[gd_scene load_steps=65 format=2]

[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_15.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_14.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_6.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_7.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_3.png" type="Texture" id=6]
[ext_resource path="res://Code/Zombie.gd" type="Script" id=7]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_0.png" type="Texture" id=10]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_12.png" type="Texture" id=12]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_13.png" type="Texture" id=13]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_8.png" type="Texture" id=14]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_9.png" type="Texture" id=15]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_16.png" type="Texture" id=16]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_10.png" type="Texture" id=17]
[ext_resource path="res://Assets/Enemy/Zombie/skeleton-move_11.png" type="Texture" id=18]
[ext_resource path="res://Assets/Others/light.png" type="Texture" id=19]
[ext_resource path="res://Assets/Audio/SoundEffects/Blood.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(5).png" type="Texture" id=21]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(3).png" type="Texture" id=22]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(4).png" type="Texture" id=23]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(1).png" type="Texture" id=24]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(2).png" type="Texture" id=25]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(6).png" type="Texture" id=26]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(8).png" type="Texture" id=27]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(9).png" type="Texture" id=28]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(10).png" type="Texture" id=29]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(11).png" type="Texture" id=30]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(12).png" type="Texture" id=31]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(13).png" type="Texture" id=32]
[ext_resource path="res://Assets/Enemy/ZombieDeath/skeleton-idle_0(7).png" type="Texture" id=33]
[ext_resource path="res://Assets/Others/BloodEffects/frame_05_delay-0.06s.png" type="Texture" id=34]
[ext_resource path="res://Assets/Others/BloodEffects/frame_02_delay-0.06s.png" type="Texture" id=35]
[ext_resource path="res://Assets/Others/BloodEffects/frame_01_delay-0.06s.png" type="Texture" id=36]
[ext_resource path="res://Assets/Others/BloodEffects/frame_07_delay-0.06s.png" type="Texture" id=37]
[ext_resource path="res://Assets/Others/BloodEffects/frame_03_delay-0.06s.png" type="Texture" id=38]
[ext_resource path="res://Assets/Others/BloodEffects/frame_04_delay-0.06s.png" type="Texture" id=39]
[ext_resource path="res://Assets/Others/BloodEffects/frame_06_delay-0.06s.png" type="Texture" id=40]
[ext_resource path="res://Assets/Others/BloodEffects/frame_00_delay-0.06s.png" type="Texture" id=41]
[ext_resource path="res://Assets/Others/BloodEffects/frame_08_delay-0.06s.png" type="Texture" id=42]
[ext_resource path="res://Assets/Others/BloodEffects/frame_09_delay-0.06s.png" type="Texture" id=43]
[ext_resource path="res://Assets/Others/BloodEffects/frame_10_delay-0.06s.png" type="Texture" id=44]
[ext_resource path="res://Assets/Others/BloodEffects/frame_11_delay-0.06s.png" type="Texture" id=45]
[ext_resource path="res://Assets/Others/BloodEffects/frame_12_delay-0.06s.png" type="Texture" id=46]
[ext_resource path="res://Assets/Others/BloodEffects/frame_13_delay-0.06s.png" type="Texture" id=47]
[ext_resource path="res://Assets/Others/BloodEffects/frame_14_delay-0.06s.png" type="Texture" id=48]
[ext_resource path="res://Assets/Others/BloodEffects/frame_15_delay-0.06s.png" type="Texture" id=49]
[ext_resource path="res://Assets/Others/BloodEffects/frame_16_delay-0.2s.png" type="Texture" id=50]
[ext_resource path="res://Assets/Audio/SoundEffects/Headblow.wav" type="AudioStream" id=51]
[ext_resource path="res://Assets/Enemy/ZombieAttack/skeleton-attack_8.png" type="Texture" id=52]
[ext_resource path="res://Assets/Enemy/ZombieAttack/skeleton-attack_7.png" type="Texture" id=53]
[ext_resource path="res://Assets/Enemy/ZombieAttack/skeleton-attack_6.png" type="Texture" id=54]
[ext_resource path="res://Assets/Enemy/ZombieAttack/skeleton-attack_5.png" type="Texture" id=55]
[ext_resource path="res://Assets/Enemy/ZombieAttack/skeleton-attack_4.png" type="Texture" id=56]
[ext_resource path="res://Assets/Enemy/ZombieAttack/skeleton-attack_3.png" type="Texture" id=57]
[ext_resource path="res://Assets/Enemy/ZombieAttack/skeleton-attack_0.png" type="Texture" id=58]
[ext_resource path="res://Assets/Enemy/ZombieAttack/skeleton-attack_2.png" type="Texture" id=59]
[ext_resource path="res://Assets/Enemy/ZombieAttack/skeleton-attack_1.png" type="Texture" id=60]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 58 ), ExtResource( 60 ), ExtResource( 59 ), ExtResource( 57 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 52 ) ],
"loop": true,
"name": "Attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 33 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "Death",
"speed": 24.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 16 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 34 ), ExtResource( 40 ), ExtResource( 37 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ) ],
"loop": true,
"name": "BloodSplat",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 68.1175

[sub_resource type="CircleShape2D" id=3]
radius = 92.3472

[node name="Zombie" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="ZomSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "run"
frame = 2
playing = true

[node name="Blood2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -55, -32 )
scale = Vector2( 0.74, 0.67 )
frames = SubResource( 4 )
animation = "BloodSplat"
frame = 4
playing = true

[node name="ZombieCollision1" type="CollisionShape2D" parent="."]
position = Vector2( -19, 9 )
shape = SubResource( 1 )

[node name="ZomAreaHitbox" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="ZomAreaHitbox"]
position = Vector2( -14, 10 )
shape = SubResource( 3 )

[node name="StunTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ZombieHitLight" type="Light2D" parent="."]
visible = false
texture = ExtResource( 19 )
color = Color( 0.321569, 0.14902, 0.14902, 1 )

[node name="Blood" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )

[node name="Headshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 51 )
volume_db = 3.586

[connection signal="body_entered" from="ZomAreaHitbox" to="." method="_on_ZomAreaHitbox_body_entered"]
[connection signal="timeout" from="StunTime" to="." method="_on_StunTime_timeout"]
